--- a/css/prettyscribe.css
+++ b/css/prettyscribe.css
@@ -133,45 +133,63 @@ label {
 }
 
 .aos4_unit_stats {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    border: 2px solid #5a4a2a;
-    border-radius: 4px;
+    background-image: url('../assets/aos_stats_4.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    position: relative;
     width: 100%;
-    aspect-ratio: 1;
-    text-align: center;
+    margin: 0 auto;
 }
 
-.aos4_stat_move, .aos4_stat_health, .aos4_stat_save, .aos4_stat_control {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #5a4a2a;
-    padding: 4px;
+.aos4_unit_stats::after {
+    padding-top: 100%;
+    display: block;
+    content: '';
+}
+
+.aos4_manifestation_stats {
+    background-image: url('../assets/aos_spell_4.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.aos4_manifestation_stats::after {
+    padding-top: 100%;
+    display: block;
+    content: '';
 }
 
 .aos4_stat_move {
-    background-color: #e8e3ca;
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .aos4_stat_health {
-    background-color: #d1c89a;
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
 }
 
 .aos4_stat_save {
-    background-color: #d1c89a;
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
 }
 
 .aos4_stat_control {
-    background-color: #e8e3ca;
-}
-
-.aos4_stat_label {
-    font-size: 10px;
-    font-weight: bold;
-    text-transform: uppercase;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .aos4_light {
